--- a/src/utils/locales/en/translation.json
+++ b/src/utils/locales/en/translation.json
@@ -3,8 +3,8 @@
     "logo_title": "COVID TRACKER",
     "home": "Home",
     "news": "News",
-    "chart": "Chart",
-    "setting": "Setting",
+    "chart": "Countries",
+    "setting": "Global",
     "highlights": "Highlights",
     "vietnam": "Vietnam",
     "profille": "Welcome Admin",
@@ -13,13 +13,13 @@
     "vietnam_news": "Vietnam News",
     "not_found": "Page Not Found. We can't find the page you're looking.",
     "tracking_covid": "Tracking Global Covid",
-    "covid_analytics": "Covid Analytics",
+    "covid_analytics": "Covid Analytics By Country",
     "country": "Country",
     "select_country": "Select Country",
     "live_case_country": "Live Cases by Country",
     "world_wide_case": "Worldwide new ",
     "total_cases": "Total cases",
-    "covid_cases": "Coronavirus Cases",
+    "covid_cases": "Confirmed",
     "covid_recovered": "Recovered",
     "covid_death": "Death",
     "all": "All",
