--- a/src/utils/locales/vi/translation.json
+++ b/src/utils/locales/vi/translation.json
@@ -3,8 +3,8 @@
     "logo_title": "THEO DÕI COVID",
     "home": "Trang Chủ",
     "news": "Tin Tức",
-    "chart": "Biểu Đồ",
-    "setting": "Cài Đặt",
+    "chart": "Quốc Gia",
+    "setting": "Thế Giới",
     "highlights": "Tin Nổi Bật",
     "vietnam": "Việt Nam",
     "profille": "Chào Mừng Admin",
@@ -19,8 +19,8 @@
     "live_case_country": "Ca nhiễm theo quốc gia",
     "world_wide_case": "Ca nhiễm thế giới theo ",
     "total_cases": "Tỗng Số Ca Nhiễm",
-    "covid_cases": "Ca Đang Nhiễm",
-    "covid_recovered": "Đã Hồi Phục",
+    "covid_cases": "Ca Nhiễm",
+    "covid_recovered": "Hồi Phục",
     "covid_death": "Đã Chết,",
     "all": "Tất cả",
     "day": "Ngày"
