--- a/src/utils/locales/vi/translation.json
+++ b/src/utils/locales/vi/translation.json
@@ -12,7 +12,7 @@
     "loadmore": "Xem thêm",
     "vietnam_news": "Tin tức Việt Nam",
     "not_found": "Page này không tồn tại Vui lòng thử lại hoặc về trang chủ.",
-    "tracking_covid": "Theo Dõi Covid Trên TG",
+    "tracking_covid": "Theo Dõi Covid Trên Thế giới",
     "covid_analytics": "Số Liệu Covid Theo Quốc Gia",
     "country": "Quốc Gia",
     "select_country": "Chọn quốc gia",
